[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/scr_confirm.gd" type="Script" id=1]
[ext_resource path="res://_Misc/Fonts/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://_Misc/Fonts/marker_felt.tres" type="DynamicFont" id=3]
[ext_resource path="res://_Misc/Fonts/Marker Felt.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.105882, 0.105882, 0.105882, 0.431373 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.105882, 0.105882, 0.105882, 0.843137 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 4 )

[node name="ConfirmationPrompt" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 1 )

[node name="bg_black" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.013
margin_bottom = 0.200012
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="PanelContainer" parent="bg_black"]
anchor_left = 0.391
anchor_top = 0.4
anchor_right = 0.609
anchor_bottom = 0.667
margin_left = -64.384
margin_top = -3.2
margin_right = 64.384
margin_bottom = -3.40005
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="vbox_container" type="VBoxContainer" parent="bg_black/container"]
margin_right = 352.0
margin_bottom = 162.136
custom_constants/separation = 30
alignment = 1

[node name="desc" type="Label" parent="bg_black/container/vbox_container"]
margin_top = 31.0
margin_right = 352.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 3 )
text = "Are you sure?"
align = 1
autowrap = true

[node name="hbox_buttons" type="HBoxContainer" parent="bg_black/container/vbox_container"]
margin_left = 89.0
margin_top = 97.0
margin_right = 263.0
margin_bottom = 130.0
grow_horizontal = 2
size_flags_horizontal = 6
custom_constants/separation = 40
alignment = 1

[node name="btn_confirm" type="Button" parent="bg_black/container/vbox_container/hbox_buttons"]
margin_right = 72.0
margin_bottom = 33.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.796078, 0, 1 )
text = "Confirm"
flat = true

[node name="btn_cancel" type="Button" parent="bg_black/container/vbox_container/hbox_buttons"]
margin_left = 112.0
margin_right = 174.0
margin_bottom = 33.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.796078, 0, 1 )
text = "Cancel"
flat = true
